--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,13 @@
 <DOCTYPE html>
 	<html>
 		<head>
-			<title>Top 5 Songs</title>
+			<title>Talidong FA2</title>
+
+			<meta charset = "UTF-8">
+			<meta name = "author" content = "Jophe">
+			<meta name = "section" content = "Sodium">
+			<meta name = "keywords" content = "FA2">
+			<meta name = "revised" content = "09/19/23">
 		</head>
 			<body style="background-color: white;">
 				<table style="border:1px solid black; border-spacing: 0px ">
